# wmpower

./: AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  LEGGIMI  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  config.status  configure  configure.in  wmpower.spec
lib_utils/: lib_utils.c  lib_utils.h
pixmaps/.xvpics/: Low.xpm  wmab_mask.xbm  wmab_master.xpm
src/: Makefile  Makefile.am  Makefile.in  wmpower.c
src/dockapp/: Makefile  Makefile.in  dockapp.c
src/pixmaps/: wmpower_master.xpm  wmpower_master_LowColor.xpm
src/power_management/: Makefile  Makefile.am  Makefile.in  power_management.c  power_management.h
src/power_management/acpi/: libacpi.c  libacpi.h
src/power_management/compal/: compal_lib.c  compal_lib.h
src/power_management/cpufreq/: cpufreq.c
src/power_management/dell/: dell_lib.c
src/power_management/ibm/: ibm_lib.c  ibm_lib.h
src/power_management/lib_utils/: lib_utils.c  lib_utils.h
src/power_management/sysps/: libsysps.c  libsysps.h
src/power_management/toshiba/: hci.c  hci.h  sci.h  toshiba_lib.c  toshiba_lib.h
toshiba/: hci.c  hci.h  sci.c  sci.h  toshiba_acpi.c  toshiba_lib.c  toshiba_lib.h
wmpower/: libacpi.c  libacpi.h  libapm.c  libapm.h  power_management.c  power_management.h  wmpower.c  wmpower.h
